--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -11,34 +11,77 @@
     "eslint-plugin-prettier": "^3.4.0"
   },
   "dependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-etherscan": "^3.0.1",
-    "@openzeppelin/contracts": "^4.7.3",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@chainlink/contracts": "0.1.7",
+    "@openzeppelin/contracts": "3.4.1-solc-0.7-2",
+    "@openzeppelin/contracts-upgradeable": "3.4.2",
+    "@perp/perp-oracle-contract": "0.4.3",
+    "@uniswap/v3-core": "https://github.com/Uniswap/uniswap-v3-core/tarball/v1.0.0",
+    "@uniswap/v3-periphery": "1.0.1",
     "@tenderly/hardhat-tenderly": "^1.0.10",
-    "@typechain/ethers-v5": "^10.1.0",
-    "@typechain/hardhat": "^6.1.2",
-    "@types/mocha": "^9.1.0",
-    "chai": "^4.2.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
-    "ethers": "^5.4.4",
-    "hardhat": "^2.10.2",
     "hardhat-abi-exporter": "^2.8.0",
     "hardhat-deploy": "^0.9.0",
-    "hardhat-gas-reporter": "^1.0.4",
     "node-watch": "^0.7.0",
     "qrcode-terminal": "^0.12.0",
     "ramda": "^0.27.1",
-    "solidity-coverage": "^0.7.21"
+    "@eth-optimism/smock": "1.1.4",
+    "@ethereumjs/block": "3.3.0",
+    "@ethereumjs/blockchain": "5.3.0",
+    "@ethereumjs/common": "2.3.0",
+    "@ethereumjs/tx": "3.2.0",
+    "@ethereumjs/vm": "5.4.0",
+    "@nomiclabs/ethereumjs-vm": "4.2.2",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+    "@nomiclabs/hardhat-waffle": "2.0.1",
+    "@openzeppelin/hardhat-upgrades": "1.10.0",
+    "@typechain/ethers-v5": "7.0.0",
+    "@typechain/hardhat": "2.0.1",
+    "@types/chai": "4.2.18",
+    "@types/json-stable-stringify": "1.0.33",
+    "@types/lodash": "4.14.170",
+    "@types/mocha": "9.0.0",
+    "@types/node": "15.6.1",
+    "bignumber.js": "9.0.1",
+    "chai": "4.3.4",
+    "eslint-config-prettier": "8.5.0",
+    "ethers": "5.6.1",
+    "hardhat": "^2.10.2",
+    "hardhat-contract-sizer": "2.5.1",
+    "hardhat-dependency-compiler": "1.1.1",
+    "hardhat-gas-reporter": "1.0.4",
+    "husky": "6.0.0",
+    "json-stable-stringify": "1.0.1",
+    "lint-staged": "11.0.0",
+    "lodash": "4.17.21",
+    "mocha": "9.1.1",
+    "prettier": "2.3.0",
+    "prettier-plugin-solidity": "1.0.0-beta.11",
+    "shelljs": "0.8.4",
+    "solc": "0.7.6",
+    "solhint": "3.3.7",
+    "solhint-plugin-prettier": "0.0.5",
+    "solidity-coverage": "0.7.16",
+    "truffle-flatten": "1.0.8",
+    "ts-generator": "0.1.1",
+    "ts-node": "10.0.0",
+    "typechain": "5.0.0",
+    "typescript": "4.3.2"
   },
   "scripts": {
     "chain": "hardhat node --network hardhat --no-deploy",
     "fork": "hardhat node --no-deploy --network hardhat --fork https://mainnet.infura.io/v3/460f40a260564ac4a4f4b3fffb032dad",
     "test": "hardhat test --network hardhat",
+    "typechain": "npm run typechain-openzeppelin && npm run typechain-perp-oracle",
+    "typechain-openzeppelin": "typechain --target ethers-v5 --out-dir ./typechain/openzeppelin './node_modules/@openzeppelin/contracts/build/contracts/**/*.json'",
+    "typechain-perp-oracle": "typechain --target ethers-v5 --out-dir ./typechain/perp-oracle './node_modules/@perp/perp-oracle-contract/artifacts/contracts/**/*.json'",
     "compile": "hardhat compile",
+    "perp-clean": "rm -rf typechain && rm -rf artifacts && rm -rf cache",
+    "perp-build": "npm run typechain && hardhat compile",
     "deploy": "hardhat deploy --export-all ../react-app/src/contracts/hardhat_contracts.json",
     "postdeploy": "hardhat run scripts/publish.js",
     "watch": "node scripts/watch.js",
