--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "start": "yarn workspace @scaffold-eth/react-app start",
     "compile": "yarn workspace @scaffold-eth/hardhat compile",
     "perp-build": "yarn workspace @scaffold-eth/hardhat perp-build",
+    "perp-clean": "yarn workspace @scaffold-eth/hardhat perp-clean",
     "deploy": "yarn workspace @scaffold-eth/hardhat deploy",
     "verify": "yarn workspace @scaffold-eth/hardhat verify",
     "watch": "yarn workspace @scaffold-eth/hardhat watch",
