--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -19,7 +19,7 @@
     "@openzeppelin/contracts": "3.4.1-solc-0.7-2",
     "@openzeppelin/contracts-upgradeable": "3.4.2",
     "@perp/perp-oracle-contract": "0.4.3",
-    "@uniswap/v3-core": "1.0.0",
+    "@uniswap/v3-core": "https://github.com/Uniswap/uniswap-v3-core/tarball/v1.0.0",
     "@uniswap/v3-periphery": "1.0.1",
     "@tenderly/hardhat-tenderly": "^1.0.10",
     "chalk": "^4.1.0",
