--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -15,7 +15,7 @@
         "@nomiclabs/hardhat-etherscan": "^3.0.1",
         "@nomicfoundation/hardhat-toolbox": "^1.0.2",
         "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
-        "@chainlink/contracts": "https://github.com/smartcontractkit/chainlink/tree/v1.7.0",
+        "@chainlink/contracts": "0.1.7",
         "@openzeppelin/contracts": "3.4.1-solc-0.7-2",
         "@openzeppelin/contracts-upgradeable": "3.4.2",
         "@perp/perp-oracle-contract": "0.4.3",
