--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,5 @@
    },
    "git.detectSubmodules": false,
    "task.allowAutomaticTasks": "off",
-   "solidity.compileUsingRemoteVersion": "v0.7.6+commit.7338295f",
-   "solidity.defaultCompiler": "localNodeModule"
+   "solidity.compileUsingRemoteVersion": "v0.7.6+commit.7338295f"
 }
